--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,14 @@
 name: Build wxWidgets
 
 on:
-  push:
+  pull_request:
     branches:
-      - "feat/ci"
-#  pull_request:
-#    branches:
-#      - "ue3"
+      - "ue3"
 
 env:
   UE3_BUILD_DIR: ${{ github.workspace }}/_build
   UE3_COMPILE_DIR: ${{ github.workspace }}/_build/ci-build
+  UE3_PACKAGE_DIR: ${{ github.workspace }}/_build/package
   UE3_SRC_DIR: ${{ github.workspace }}/src
   UE3_THIRDPARTY_DIR: ${{ github.workspace }}/3rdparty
 
@@ -30,7 +28,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4.1.1
         with:
           submodules: recursive
 
@@ -50,3 +48,14 @@ jobs:
         working-directory: ${{ env.UE3_COMPILE_DIR }}
         run: cmake --build . --config ${{ matrix.config }}
 
+      - name: Package project
+        working-directory: ${{ env.UE3_BUILD_DIR }}
+        run: ./ci_package.ps1 -BuildDir "${{ env.UE3_COMPILE_DIR }}" -Arch "${{ matrix.arch }}" -OutputDir "${{ env.UE3_PACKAGE_DIR }}"
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4.3.1
+        with:
+          name: ${{ matrix.config }}_${{ matrix.arch }}_${{ github.sha }}
+          path: ${{ env.UE3_PACKAGE_DIR }}
+          if-no-files-found: error
+          retention-days: 7
